fixing some alignments and margins in browse, fixing some missing sidebar styles

--- a/roda-ui/roda-wui/src/main/resources/org/roda/wui/public/Main.css
+++ b/roda-ui/roda-wui/src/main/resources/org/roda/wui/public/Main.css
@@ -1558,7 +1558,7 @@ td.datePickerMonth, td.datePickerYear {
 ************************************************/
 .main .wui-breadcrumbPanel {
     margin-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .main .wui-breadcrumbPanel .breadcrumb {
@@ -1958,7 +1958,6 @@ td.datePickerMonth, td.datePickerYear {
 .browseItemMetadata .gwt-TabPanelBottom {
     background-color: transparent;
     padding: 5px 10px;
-    margin-bottom: 20px;
     min-height: 25px;
 }
 
@@ -2067,7 +2066,7 @@ td.datePickerMonth, td.datePickerYear {
 }
 
 .descriptiveMetadataHTML {
-    padding-top: 25px;
+    padding-top: 5px;
 }
 
 .descriptiveMetadata {
